fix: align right posts with content on medium screens

--- a/blog/source/_data/styles.styl
+++ b/blog/source/_data/styles.styl
@@ -252,11 +252,22 @@
     border-radius: 4px
     color: var(--link-hover-color)
 
-@media (min-width: 1501px) and (max-width: 1700px)
+@media (min-width: 1401px) and (max-width: 1700px)
+  .header,
   .main-inner
     transform: translateX(-120px)
 
-@media (max-width: 1500px)
+@media (min-width: 1401px) and (max-width: 1599px)
+  .right-posts-card
+    left: calc(50% + 476px)
+    right: auto
+
+@media (min-width: 1600px) and (max-width: 1700px)
+  .right-posts-card
+    left: calc(86.5vw - 104px)
+    right: auto
+
+@media (max-width: 1400px)
   .right-posts-card
     display: none
 
